--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,11 @@ q:after {
     content: none;
 }
 
+:root {
+    background-color: #c2f1ff;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -132,11 +137,14 @@ table {
 }
 
 th {
-    border: 3px solid purple;
+    border: 3px solid #ffa724;
+    padding: 20px 10px;
+    font-weight: bold;
 }
 
 td {
-    border: 3px solid purple;
+    border: 3px solid #ffa724;
+    padding: 20px 10px;
 }
 
 td:nth-child(1),
