--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,24 @@ q:after {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+header {
+    text-align: center;
+    padding: 30px;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+header+div {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+header+div>button {
+    font-size: 1.2rem;
+    padding: 5px 15px;
+}
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
