--- a/styles.css
+++ b/styles.css
@@ -136,15 +136,35 @@ header {
     font-weight: bold;
 }
 
-header+div {
+.new-book-button-container {
     display: flex;
     justify-content: center;
     padding: 20px;
 }
 
-header+div>button {
+.new-book-button-container>button {
     font-size: 1.2rem;
     padding: 5px 15px;
+}
+
+.add-book-form-container {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+
+    align-items: center;
+    justify-content: center;
+}
+
+.add-book-form-container>form {
+    background-color: #ffffff;
+    border-radius: 4px;
+    padding: 20px;
 }
 
 table {
